[Q4] Tennis Player API: More Supporting Endpoints (#9)
* [Q4] Add endpoints for resolving Players by ID or by page.

* Touch up the README a little bit.

* [Q4] Resolve Containers when resolving a Player by ID.

* [Q4] Add endpoints for resolving Containers by ID or by page.
