# 04-tennis-player/handler/player.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"encoding/json"
 	"net/http"
+	"strconv"
 
 	"github.com/kerti/evm/04-tennis-player/handler/response"
 
@@ -16,6 +17,8 @@ import (
 type Player interface {
 	Startup()
 	Shutdown()
+	HandleResolveByID(w http.ResponseWriter, r *http.Request)
+	HandleResolvePage(w http.ResponseWriter, r *http.Request)
 	HandleCreate(w http.ResponseWriter, r *http.Request)
 	HandleAddBall(w http.ResponseWriter, r *http.Request)
 }
@@ -33,6 +36,95 @@ func (h *PlayerImpl) Startup() {
 // Shutdown cleans up everything and shuts down
 func (h *PlayerImpl) Shutdown() {
 	logger.Trace("Player Handler shutting down...")
+}
+
+// HandleResolveByID handles the request
+// @Summary Resolve a Player.
+// @Description Resolves a Player by its ID.
+// @Tags players
+// @Produce json
+// @Param id path string true "The Player's identifier."
+// @Success 200 {object} response.BaseResponse{data=model.Player}
+// @Failure 400 {object} response.BaseResponse
+// @Failure 404 {object} response.BaseResponse
+// @Failure 500 {object} response.BaseResponse
+// @Router /players/{id} [get]
+func (h *PlayerImpl) HandleResolveByID(w http.ResponseWriter, r *http.Request) {
+	id, err := getIDFromRequest(w, r)
+	if err != nil {
+		return
+	}
+
+	player, err := h.PlayerService.ResolveByID(id)
+	if err != nil {
+		response.RespondWithError(w, err)
+		return
+	}
+
+	response.RespondWithJSON(w, http.StatusOK, player)
+}
+
+// HandleResolvePage handles the request
+// @Summary Resolve a Page of Players.
+// @Description Resolves a Page of Players based on page and page size parameters.
+// @Tags players
+// @Produce json
+// @Param page query int false "The page number. Defaults to 1."
+// @Param pageSize query int false "The number of records on a page. Defaults to 10."
+// @Success 200 {object} response.BaseResponse{data=model.Page}
+// @Failure 400 {object} response.BaseResponse
+// @Failure 404 {object} response.BaseResponse
+// @Failure 500 {object} response.BaseResponse
+// @Router /players/ [get]
+func (h *PlayerImpl) HandleResolvePage(w http.ResponseWriter, r *http.Request) {
+	err := r.ParseForm()
+	if err != nil {
+		response.RespondWithError(w, err)
+		return
+	}
+
+	pageNumStr, withPageNum := r.URL.Query()["page"]
+	pageSizeStr, withPageSize := r.URL.Query()["pageSize"]
+
+	pageNum := 1
+	if withPageNum && len(pageNumStr[0]) > 0 {
+		pageNum, err = strconv.Atoi(pageNumStr[0])
+		if err != nil {
+			response.RespondWithError(w, failure.BadRequest(err))
+			return
+		}
+	}
+
+	if pageNum <= 0 {
+		response.RespondWithError(
+			w,
+			failure.BadRequestFromString("page must be positive integer"))
+		return
+	}
+
+	pageSize := 10
+	if withPageSize && len(pageSizeStr[0]) > 0 {
+		pageSize, err = strconv.Atoi(pageSizeStr[0])
+		if err != nil {
+			response.RespondWithError(w, failure.BadRequest(err))
+			return
+		}
+	}
+
+	if pageSize <= 0 {
+		response.RespondWithError(
+			w,
+			failure.BadRequestFromString("page size must be positive integer"))
+		return
+	}
+
+	page, err := h.PlayerService.ResolvePage(pageNum, pageSize)
+	if err != nil {
+		response.RespondWithError(w, err)
+		return
+	}
+
+	response.RespondWithJSON(w, http.StatusOK, page)
 }
 
 // HandleCreate handles the request
