# 04-tennis-player/server/routes.go
@@ -26,10 +26,14 @@ func (s *Server) InitRoutes() {
 	s.router.HandleFunc("/health", s.HealthHandler.HandleHealthCheck).Methods("GET")
 
 	// Containers
+	s.router.HandleFunc("/containers/{id}", s.ContainerHandler.HandleResolveByID).Methods("GET")
+	s.router.HandleFunc("/containers/", s.ContainerHandler.HandleResolvePage).Methods("GET")
 	s.router.HandleFunc("/containers", s.ContainerHandler.HandleCreate).Methods("POST")
 
 	// Players
 	s.router.HandleFunc("/players", s.PlayerHandler.HandleCreate).Methods("POST")
+	s.router.HandleFunc("/players/{id}", s.PlayerHandler.HandleResolveByID).Methods("GET")
+	s.router.HandleFunc("/players/", s.PlayerHandler.HandleResolvePage).Methods("GET")
 	s.router.HandleFunc("/players/addBall", s.PlayerHandler.HandleAddBall).Methods("POST")
 
 	http.Handle("/", s.router)
